# oslec

./: Makefile  README.txt
kernel/: Makefile  install-1.2.sh  install-1.4.sh  oslec-ctrl-panel.sh  oslec.h  oslec_wrap.c  test-1.2.sh  zaptel-1.2.13.patch  zaptel-1.2.18.patch  zaptel-1.2.24.patch  zaptel-1.4.1.patch  zaptel-1.4.11.patch  zaptel-1.4.12.1.patch  zaptel-1.4.3.patch  zaptel-1.4.7.1.patch  zaptel-1.4.8.patch  zaptel-1.4.9.2.patch
kernel-test/: Makefile  ec.h  oslec_test.c  tx.h
spandsp-0.0.3/: ChangeLog  Makefile  Makefile.am  Makefile.in  config-h.in  config.status  configure  configure.ac  libspandsp.vcproj  libtool  spandsp.spec  spandsp.spec.in
spandsp-0.0.3/doc/: Makefile  Makefile.am  Makefile.in  libspandsp-doxygen
spandsp-0.0.3/itutests/: Makefile  Makefile.am  Makefile.in
spandsp-0.0.3/itutests/fax/: Makefile  Makefile.am  Makefile.in  generate_dithered_tif.c  generate_sized_pages.c
spandsp-0.0.3/src/: Makefile  Makefile.am  Makefile.in  adsi.c  async.c  at_dictionary_gen.c  at_interpreter.c  awgn.c  bell_r2_mf.c  bert.c  bit_operations.c  bitstream.c  complex_dds.c  complex_filters.c  complex_vector_float.c  dds.c  dtmf.c  fax.c  faxfont.h  fsk.c  g711.c  g722_decode.c  g722_encode.c  g726.c  gsm0610_decode.c  gsm0610_encode.c  gsm0610_local.h  gsm0610_long_term.c  gsm0610_lpc.c  gsm0610_preprocess.c  gsm0610_rpe.c  gsm0610_short_term.c  hdlc.c  ima_adpcm.c  logging.c  lpc10_analyse.c  lpc10_decode.c  lpc10_encode.c  lpc10_placev.c  lpc10_voicing.c  (+39 more)
spandsp-0.0.3/src/.deps/: adsi.Plo  async.Plo  at_dictionary_gen.Po  at_interpreter.Plo  awgn.Plo  bell_r2_mf.Plo  bert.Plo  bit_operations.Plo  bitstream.Plo  complex_dds.Plo  complex_filters.Plo  complex_vector_float.Plo  dds.Plo  dtmf.Plo  echo.Plo  fax.Plo  fsk.Plo  g711.Plo  g722_decode.Plo  g722_encode.Plo  g726.Plo  gsm0610_decode.Plo  gsm0610_encode.Plo  gsm0610_long_term.Plo  gsm0610_lpc.Plo  gsm0610_preprocess.Plo  gsm0610_rpe.Plo  gsm0610_short_term.Plo  hdlc.Plo  ima_adpcm.Plo  logging.Plo  lpc10_analyse.Plo  lpc10_decode.Plo  lpc10_encode.Plo  lpc10_placev.Plo  lpc10_voicing.Plo  modem_connect_tones.Plo  modem_echo.Plo  noise.Plo  oki_adpcm.Plo  (+33 more)
spandsp-0.0.3/src/msvc/: inttypes.h  tgmath.h  vc8proj.head
spandsp-0.0.3/src/spandsp/: adsi.h  arctan2.h  async.h  at_interpreter.h  awgn.h  bell_r2_mf.h  bert.h  biquad.h  bitstream.h  complex.h  complex_filters.h  complex_vector_float.h  dds.h  dtmf.h  fax.h  fsk.h  g168models.h  g711.h  g722.h  g726.h  gsm0610.h  hdlc.h  ima_adpcm.h  lpc10.h  modem_connect_tones.h  modem_echo.h  noise.h  oki_adpcm.h  playout.h  plc.h  power_meter.h  queue.h  schedule.h  sig_tone.h  silence_gen.h  super_tone_rx.h  super_tone_tx.h  t30.h  t30_fcf.h  t31.h  (+21 more)
spandsp-0.0.3/tests/: Makefile  Makefile.am  Makefile.in  adsi_tests.c  async_tests.c  at_interpreter_tests.c  awgn_tests.c  bell_mf_rx_tests.c  bell_mf_tx_tests.c  bert_tests.c  bit_operations_tests.c  dc_restore_tests.c  dds_tests.c  dtmf_rx_tests.c  dtmf_tx_tests.c  echo_dump.m  echo_monitor.cpp  echo_monitor.h  echo_tests.c  fax_decode.c  fax_tests.c  fax_tests.sh  fsk_tests.c  g168_quick.sh  g168_tests.c  g168_tests.sh  g711_tests.c  g722_tests.c  g726_tests.c  gsm0610_tests.c  hdlc_tests.c  ima_adpcm_tests.c  ip_network_model.c  ip_network_model.h  line_model.c  line_model.h  line_model_monitor.cpp  line_model_monitor.h  line_model_tests.c  line_models.h  (+42 more)
spandsp-0.0.3/tests/.deps/: adsi_tests.Po  async_tests.Po  at_interpreter_tests.Po  awgn_tests.Po  bell_mf_rx_tests.Po  bell_mf_tx_tests.Po  bert_tests.Po  bit_operations_tests.Po  dc_restore_tests.Po  dds_tests.Po  dtmf_rx_tests.Po  dtmf_tx_tests.Po  echo_monitor.Po  echo_tests.Po  fax_decode.Po  fax_tests.Po  fsk_tests.Po  g168_tests.Po  g711_tests.Po  g722_tests.Po  g726_tests.Po  gsm0610_tests.Po  hdlc_tests.Po  ima_adpcm_tests.Po  ip_network_model.Po  line_model.Po  line_model_monitor.Po  line_model_tests.Po  logging_tests.Po  lpc10_tests.Po  make_g168_css.Po  make_line_models.Po  modem_connect_tones_tests.Po  modem_echo_tests.Po  modem_monitor.Po  noise_tests.Po  oki_adpcm_tests.Po  playout_tests.Po  plc_tests.Po  power_meter_tests.Po  (+26 more)
user/: Makefile  pl.m  sample.c  speedtest.c  tfir.c
